Updates from OHC
Signed-off-by: Chris Jackson <chris@cd-jackson.com> (+12 squashed commits)

Use ConfigurableService as ComponentPropertyType (#1491)
Removed deprecated constructors and methods from Config API  (#1448)
Annotate icon and tile classes with null annotations (#1490)
Removed dependency on 'org.apache.commons.io' (#1441)
Use UTF-8 to read files (#1484)
REST API: Re-enable auth (#1482)
Avoid UnsupportedEncodingException & use const from StandardCharsets (#1480)
Merged o.o.c.automation.module.script.defaultscope.tests into o.o.c.automation.module.script.tests (#1485)
Use constructor injection and update null annotations (#1487)
Removed 'getThingByUID()' method from 'BaseBridgeHandler' (#1465)
Simplify lifecycle by using constructor injection (#1479)
Removed INFO logging from ScriptedAutomationManager#removeAll() method (#1478)